src/main/java/com/example/board/global/error/ErrorResponse.java
package com.example.board.global.error;

import lombok.AllArgsConstructor;
import lombok.Getter;

@AllArgsConstructor
@Getter
public class ErrorResponse {

    private int status;
    private String message;
}
